--- a/app/templates/new_patient.html
+++ b/app/templates/new_patient.html
@@ -13,6 +13,7 @@
                 </div>
                 <div class="card-body">
                     <form action="{{ url_for('main.new_patient') }}" method="POST">
+                        {{ csrf_token() }}
                         <div class="mb-3">
                             <label for="name" class="form-label">Full Name</label>
                             <input type="text" class="form-control" id="name" name="name" required>
